--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 baseurl:
 url: https://muarine.github.io/
 date_format: "ordinal"
-title: MyBlog
-subtitle: "蜗牛"
+title: 毛茸茸
+subtitle: "毛运的个人博客"
 description: "毛运的个人博客"
 keywords: 毛运
 favicon: /favicon.ico
