--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ baseurl:
 url: https://muarine.github.io/
 date_format: "ordinal"
 title: 毛茸茸
-subtitle: "毛运的个人博客"
-description: "Muarine's Blog"
-keywords: "点滴积累"
+subtitle: "Muarine's Blog"
+description: "点滴记录"
+keywords: "毛运,博客"
 favicon: /favicon.ico
 timezone: Asia/BeiJing
 encoding: "utf-8"
